fix(ui): code block in pre spacing quirk

--- a/frontend/src/styles/index.scss
+++ b/frontend/src/styles/index.scss
@@ -523,6 +523,14 @@ input[type="submit"] {
 		margin: 4px 0;
 		width: 100%;
 		box-sizing: border-box;
+
+		& > code {
+			// HACK: prevent funky whitespace thing
+			display: block;
+
+			/* // HACK: visually center backticks */
+			/* margin-top: 8px; */
+		}
 	}
 }
 
